--- a/BTE320_In_class_assignments.ipynb
+++ b/BTE320_In_class_assignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJesYVAXc1/2iCjZLuZv63",
+      "authorship_tag": "ABX9TyMQypmaudDfnOUDs7hH7Oyq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,7 +85,7 @@
         "id": "NSzAOue6mwU3",
         "outputId": "857bc321-62c4-4da0-aeea-3db9b268efd2"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,6 +95,51 @@
             "Select Player 1 Rock, Paper, or Scissors: Chris\n",
             "Select Player 2 Rock, Paper, or Scissors: Zach\n",
             "Chris Wins, GOAT\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "N1 = float(input(f'Enter a Number: '))\n",
+        "Operation = input(f'Desired Operation(*,/,-,+,^): ')\n",
+        "N2 = float(input(f'Enter a Number: '))\n",
+        "if Operation == '+':\n",
+        "  Calc = (N1 + N2)\n",
+        "  print(f'Calculated: {Calc}')\n",
+        "elif Operation == '-':\n",
+        "    Calc = (N1 - N2)\n",
+        "    print(f\"Calculated: {Calc}\")\n",
+        "elif Operation == '*':\n",
+        "  Calc = (N1 * N2)\n",
+        "  print(f\"Calculated: {Calc}\")\n",
+        "elif Operation == '/':\n",
+        "  Calc = (N1 / N2)\n",
+        "  print(f'Calculated: {Calc}')\n",
+        "elif Operation == '^':\n",
+        "  Calc = (N1 ** N2)\n",
+        "  print(f'Calculated: {Calc}')\n",
+        "else:\n",
+        "  print('Error')"
+      ],
+      "metadata": {
+        "id": "aOIHsBTE0-sR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b8a2eafe-0b04-433b-f6f2-9744752ae903"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a Number: 5.2\n",
+            "Desired Operation(*,/,-,+,^): +\n",
+            "Enter a Number: 3.4\n",
+            "Calculated: 8.6\n"
           ]
         }
       ]
