--- a/BTE320_In_class_assignments.ipynb
+++ b/BTE320_In_class_assignments.ipynb
@@ -83,18 +83,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NSzAOue6mwU3",
-        "outputId": "857bc321-62c4-4da0-aeea-3db9b268efd2"
+        "outputId": "a744cb48-7aae-4f00-9f4f-1b76dccc785a"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Rock... Paper... Scissors... Shoot!\n",
-            "Select Player 1 Rock, Paper, or Scissors: Chris\n",
-            "Select Player 2 Rock, Paper, or Scissors: Zach\n",
-            "Chris Wins, GOAT\n"
+            "Select Player 1 Rock, Paper, or Scissors: Rock\n",
+            "Select Player 2 Rock, Paper, or Scissors: Paper\n",
+            "Player 2 Wins\n"
           ]
         }
       ]
