--- a/BTE320_In_class_assignments.ipynb
+++ b/BTE320_In_class_assignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQypmaudDfnOUDs7hH7Oyq",
+      "authorship_tag": "ABX9TyPu8F7KPOkXF4swH7N+M011",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,7 +85,7 @@
         "id": "NSzAOue6mwU3",
         "outputId": "a744cb48-7aae-4f00-9f4f-1b76dccc785a"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +130,7 @@
         },
         "outputId": "b8a2eafe-0b04-433b-f6f2-9744752ae903"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,6 +140,62 @@
             "Desired Operation(*,/,-,+,^): +\n",
             "Enter a Number: 3.4\n",
             "Calculated: 8.6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "Play=input(f'Would you like to play Rock, Paper, Scissors? ')\n",
+        "while Play=='Yes':\n",
+        "  print('Rock... Paper... Scissors... Shoot!')\n",
+        "  P1=input(f'Select Player 1 Rock, Paper, or Scissors: ')\n",
+        "  P2= random.choice(['Rock', 'Paper', 'Scissors'])\n",
+        "  if P1 == P2:\n",
+        "    print('Draw')\n",
+        "  elif P1 == 'Rock' and P2 == 'Scissors':\n",
+        "    print('PLayer 1 Wins')\n",
+        "  elif P1 == 'Rock' and P2 == 'Paper':\n",
+        "    print('Computer Wins')\n",
+        "  elif P1 == 'Paper' and P2 == 'Rock':\n",
+        "    print('Player 1 Wins')\n",
+        "  elif P1 == 'Paper' and P2 == \"Scissors\":\n",
+        "    print('Computer Wins')\n",
+        "  elif P1 == 'Scissors' and P2 == 'Rock':\n",
+        "    print('Computer Wins')\n",
+        "  elif P1 == 'Scissors' and P2 == 'Paper':\n",
+        "    print('Player 1 Wins')\n",
+        "  else:\n",
+        "    print('__Error__')\n",
+        "\n",
+        "  Play = input('Do you want to play again? ')\n",
+        "print('Have a Nice Day')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "02fc35da-6fd8-4484-dcd4-82a653216f27",
+        "id": "CgTur7zkymg1"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Would you like to play Rock, Paper, Scissors? Yes\n",
+            "Rock... Paper... Scissors... Shoot!\n",
+            "Select Player 1 Rock, Paper, or Scissors: Rock\n",
+            "Computer Wins\n",
+            "Do you want to play again? Yes\n",
+            "Rock... Paper... Scissors... Shoot!\n",
+            "Select Player 1 Rock, Paper, or Scissors: Paper\n",
+            "Player 1 Wins\n",
+            "Do you want to play again? no\n",
+            "Have a Nice Day\n"
           ]
         }
       ]
