--- a/BTE320_In_class_assignments.ipynb
+++ b/BTE320_In_class_assignments.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPu8F7KPOkXF4swH7N+M011",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -180,7 +179,7 @@
         "outputId": "02fc35da-6fd8-4484-dcd4-82a653216f27",
         "id": "CgTur7zkymg1"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,6 +196,186 @@
             "Do you want to play again? no\n",
             "Have a Nice Day\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ticketcost=10\n",
+        "fixedattendees=20\n",
+        "fixedcost=200\n",
+        "print('Ad$ Profit')\n",
+        "for i in range(0,201,25):\n",
+        "  attendees=2*round((i**(1/2)))+fixedattendees\n",
+        "  profit = ticketcost*(attendees)-i-fixedcost\n",
+        "  print(i ,' ', profit)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AKmLktnLEzpr",
+        "outputId": "0f28c2f6-d4b9-4c1c-8148-8a7285649c34"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ad$ Profit\n",
+            "0   0\n",
+            "25   75\n",
+            "50   90\n",
+            "75   105\n",
+            "100   100\n",
+            "125   95\n",
+            "150   90\n",
+            "175   85\n",
+            "200   80\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "i = 0\n",
+        "\n",
+        "while True:\n",
+        "  i=i+1\n",
+        "  if i == 10:\n",
+        "    break\n",
+        "  print(i, end = ' ')\n",
+        "\n",
+        "print('Done.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ze2vSqq3Kk2v",
+        "outputId": "98f403c6-9533-47cc-9faf-d760dbd51259"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 2 3 4 5 6 7 8 9 Done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "item= int(input('Please Input an Integer: '))\n",
+        "l = []\n",
+        "while item != 0:\n",
+        "  l.append(item)\n",
+        "  item=int(input('Please Input an Integer:'))\n",
+        "  if item == 0:\n",
+        "    print(l)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rNo5h9rkIuwF",
+        "outputId": "d8c40e97-1b77-4195-dcbd-3f4baf45e100"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please Input an Integer: 1\n",
+            "Please Input an Integer:2\n",
+            "Please Input an Integer:3\n",
+            "Please Input an Integer:-100\n",
+            "Please Input an Integer:0\n",
+            "[1, 2, 3, -100]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l1=[1,2,3,4]\n",
+        "l2=[1,2,5,6]\n",
+        "\n",
+        "for item in l1[:]:\n",
+        "  if item in l2:\n",
+        "    l1.remove(item)\n",
+        "\n",
+        "print(l1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "blBIvMS_NXO6",
+        "outputId": "56a23543-61c0-418f-848e-729c86955938"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[3, 4]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "months={}\n",
+        "\n",
+        "names = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec']\n",
+        "numbers = [1,2,3,4,5,6,7,8,9,10,11,12]\n",
+        "\n",
+        "for idx in range(len(numbers)):\n",
+        "  months[numbers[idx]]=names[idx]\n",
+        "months\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ag7ncNrq47d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "62bacb80-8e27-4526-b93a-ce227cc230c5"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1: 'Jan',\n",
+              " 2: 'Feb',\n",
+              " 3: 'Mar',\n",
+              " 4: 'Apr',\n",
+              " 5: 'May',\n",
+              " 6: 'Jun',\n",
+              " 7: 'Jul',\n",
+              " 8: 'Aug',\n",
+              " 9: 'Sep',\n",
+              " 10: 'Oct',\n",
+              " 11: 'Nov',\n",
+              " 12: 'Dec'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
         }
       ]
     }
