--- a/BTE320_In_class_assignments.ipynb
+++ b/BTE320_In_class_assignments.ipynb
@@ -354,7 +354,7 @@
         },
         "outputId": "62bacb80-8e27-4526-b93a-ce227cc230c5"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -378,6 +378,224 @@
           "execution_count": 21
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total_cost = float(input('What is the cost of your dream home?: '))\n",
+        "annual_salary = float(input('What is your annual salary?: '))\n",
+        "portion_saved = float(input('What percentage of your salary would you like to save? (In decimal Form): '))\n",
+        "portion_down_payment = 0.25\n",
+        "down_payment = total_cost*portion_down_payment\n",
+        "r = 0.04\n",
+        "monthly_r = r/12\n",
+        "monthly_salary = annual_salary/12\n",
+        "monthly_savings = monthly_salary*portion_saved\n",
+        "n=0\n",
+        "current_savings = 0\n",
+        "\n",
+        "n=1\n",
+        "while current_savings < down_payment:\n",
+        "  n=n+1\n",
+        "  current_savings = monthly_savings*((((((1+monthly_r)**n)-1)/monthly_r))*(1+monthly_r))\n",
+        "print(f'Number of months: {n}')"
+      ],
+      "metadata": {
+        "id": "FIk4Neohpoks",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e4e54389-4274-4040-db6b-9f37136c0a0b"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What is the cost of your dream home?: 100\n",
+            "What is your annual salary?: 10\n",
+            "What percentage of your salary would you like to save? (In decimal Form): .1\n",
+            "Number of months: 208\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#assignment: Saving with Raise\n",
+        "#modify the previous program to include:\n",
+        "#1. have user input semi-annual salary raise, semi_annual_raise (as a decimal)\n",
+        "#2. after the 6th month, increase your annual salary by that percentage\n",
+        "# hint use the mod(%) operator\n",
+        "#printouts should be like\n",
+        "#Enter Annual Salary\n",
+        "#Enter % of salary to save\n",
+        "#Enter cost of your dream home\n",
+        "#Enter semi-annual raise\n",
+        "#Calculate number of months"
+      ],
+      "metadata": {
+        "id": "FANRZTtApxCL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total_cost = float(input('What is the cost of your dream home?: '))\n",
+        "annual_salary = float(input('What is your annual salary?: '))\n",
+        "portion_saved = float(input('What percentage of your salary would you like to save? (In decimal Form): '))\n",
+        "semi_annual_raise = float(input('What is your semi-annual raise? (In decimal Form): '))\n",
+        "portion_down_payment = 0.25\n",
+        "down_payment = total_cost*portion_down_payment\n",
+        "r = 0.04\n",
+        "monthly_r = r/12\n",
+        "monthly_salary = annual_salary/12\n",
+        "monthly_savings = monthly_salary*portion_saved\n",
+        "n=0\n",
+        "current_savings = 0\n",
+        "\n",
+        "n=1\n",
+        "while current_savings < down_payment:\n",
+        "  n=n+1\n",
+        "  if n%6==0:\n",
+        "    annual_salary = annual_salary*(1+semi_annual_raise)\n",
+        "    monthly_salary = annual_salary/12\n",
+        "    monthly_savings = monthly_salary*portion_saved\n",
+        "  current_savings = monthly_savings*((((((1+monthly_r)**n)-1)/monthly_r))*(1+monthly_r))\n",
+        "print(f'Number of months: {n}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4f77cadc-60cc-4434-c809-6204573cbd31",
+        "id": "u8y6YY-uVfLL"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What is the cost of your dream home?: 100\n",
+            "What is your annual salary?: 10\n",
+            "What percentage of your salary would you like to save? (In decimal Form): .1\n",
+            "What is your semi-annual raise? (In decimal Form): .03\n",
+            "Number of months: 129\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def range_check(num, low, high,):\n",
+        "      if num >= low and num <= high:\n",
+        "        return 'In Range'\n",
+        "      else:\n",
+        "        return 'Out of Range'\n",
+        "x=float(input('Give any number: '))\n",
+        "y=float(input('Give the low end of your range: '))\n",
+        "z=float(input('Give the high end of your range: '))\n",
+        "print(range_check(x,y,z))"
+      ],
+      "metadata": {
+        "id": "10wiYslSp0Ru",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "46bdf070-bc96-4dcb-d05b-aeae998bc880"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Give any number: 10\n",
+            "Give the low end of your range: 0\n",
+            "Give the high end of your range: 10\n",
+            "In Range\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calcFee(hours):\n",
+        "  charge = 5+(2.5*hour)\n",
+        "  return charge\n",
+        "\n",
+        "hour = float(input('How many hours will you be parked?: '))\n",
+        "print('Parking fee ($): ', calcFee(hour))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J_qr-ROX9cwV",
+        "outputId": "78ccb50f-a3bf-46ca-f505-c6d85f400022"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How many hours will you be parked?: 4.5555\n",
+            "Parking fee ($):  16.38875\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calcFee(hours,decimals=2):\n",
+        "  fee = 5 + hour*2.5\n",
+        "  fee = round(fee,decimals)\n",
+        "  return fee\n",
+        "def displayFee(fee):\n",
+        "  print('Parking fee ($): ', fee)\n",
+        "\n",
+        "hour = float(input('How many hours will you be parked?: '))\n",
+        "displayFee(calcFee(hour))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "31957f66-eefa-4034-a7e6-a55d0ce76c23",
+        "id": "3ssfjuQ3CETl"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How many hours will you be parked?: 4\n",
+            "Parking fee ($):  15.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Global Scope: Variable is visible in entire program, comes from indentation\n",
+        "#Local Scope: Variable within a func or conditional"
+      ],
+      "metadata": {
+        "id": "w4ZWXyQTHs47"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
