--- a/BTE320_In_class_assignments.ipynb
+++ b/BTE320_In_class_assignments.ipynb
@@ -407,7 +407,7 @@
         },
         "outputId": "e4e54389-4274-4040-db6b-9f37136c0a0b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +475,7 @@
         "outputId": "4f77cadc-60cc-4434-c809-6204573cbd31",
         "id": "u8y6YY-uVfLL"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -563,14 +563,15 @@
         "def displayFee(fee):\n",
         "  print('Parking fee ($): ', fee)\n",
         "\n",
-        "hour = float(input('How many hours will you be parked?: '))\n",
-        "displayFee(calcFee(hour))"
+        "if __name__ == '__main__':\n",
+        "  hour = float(input('How many hours will you be parked?: '))\n",
+        "  displayFee(calcFee(hour))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "31957f66-eefa-4034-a7e6-a55d0ce76c23",
+        "outputId": "b5887abe-0a39-4743-aa3b-4b84e45656d7",
         "id": "3ssfjuQ3CETl"
       },
       "execution_count": null,
@@ -596,6 +597,112 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def reverse_string(s):\n",
+        "    if len(s) <= 1:\n",
+        "        return s\n",
+        "    else:\n",
+        "      return reverse_string(s[1:]) + s[0]\n",
+        "\n",
+        "input_string = input('Input a String: ')\n",
+        "reversed_string = reverse_string(input_string)\n",
+        "print(\"Reversed String:\", reversed_string)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-oAcSCVTHX-o",
+        "outputId": "e0290085-b5cf-42f8-de32-4d40ab196b92"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Input a String: PooP\n",
+            "Reversed String: PooP\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def wAVG(L,w):\n",
+        "  try:\n",
+        "    return sum(L[i]*w[i] for i in range(len(L)))/sum(w)\n",
+        "  except ZeroDivisionError:\n",
+        "    print('Divide by Zero Error')\n",
+        "  except TypeError:\n",
+        "    print('Type Error')\n",
+        "  else:\n",
+        "    return float('nan')\n",
+        "wAVG([1,2,3,4],[.2,.3,.4,.5])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UD7CaFzff6ZH",
+        "outputId": "4a7246d3-b6e6-4954-fbaf-efc1b03d0734"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.857142857142857"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def wAVG(L,w):\n",
+        "  try:\n",
+        "    res = []\n",
+        "    for i in range(len(L)):\n",
+        "      res.append(L[i]*w[i])\n",
+        "    return sum(res)/sum(w)\n",
+        "  except ZeroDivisionError:\n",
+        "    return []\n",
+        "  except TypeError:\n",
+        "    return []\n",
+        "  else:\n",
+        "    return float('nan')\n",
+        "\n",
+        "wAVG([1,2,3,4],[.2,.3,.4,.5])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tlts3gNchx2G",
+        "outputId": "95eb3edd-c011-421d-cdc3-6b28f559c896"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.857142857142857"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     }
   ]
 }
