--- a/BTE320_In_class_assignments.ipynb
+++ b/BTE320_In_class_assignments.ipynb
@@ -625,6 +625,156 @@
           "execution_count": 6
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Student:\n",
+        "  def __init__(self, name, number, courses):\n",
+        "    self.name = name\n",
+        "    self.number = number\n",
+        "    self.courses = []\n",
+        "  def set_name(self, newName):\n",
+        "    self.name = newName\n",
+        "  def get_name(self):\n",
+        "    return self.name\n",
+        "  def __repr__(self):\n",
+        "    return f'{self.name} {self.number}'\n",
+        "  def enroll(self, course):\n",
+        "    if course not in self.courses:\n",
+        "      self.courses.append(course)\n",
+        "      return f'Enrolled in {course}'\n",
+        "    else:\n",
+        "      print('Already Enrolled')\n",
+        "\n",
+        "  def get_courses(self):\n",
+        "    return self.courses"
+      ],
+      "metadata": {
+        "id": "4FOTzy3iwwhf"
+      },
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s1 = Student('Bob', 12345, [])"
+      ],
+      "metadata": {
+        "id": "RooiSygWpnnI"
+      },
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s1.enroll('Math')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "ya1JdO7GZeGw",
+        "outputId": "819cf72d-c030-43d1-f140-c91aee5ae78b"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Enrolled in Math'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s1.enroll('English')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "K06XkvLDvLgi",
+        "outputId": "fb067cef-eb5c-41d0-9cb4-4bf7d88ea483"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Enrolled in English'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s1.enroll('Math')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "okE38iIdvORS",
+        "outputId": "ecc08094-84e3-4164-fe74-60236b3f6a25"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Already Enrolled\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s1.get_courses()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qozN4DiSvRKA",
+        "outputId": "c70a0004-0756-44f2-e8ad-3f057e4c7096"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Math', 'English']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
     }
   ]
 }
